Closed Bug 1804326 Opened 1 year ago Closed 1 year ago

Ensure MConstantProto instructions don't interfere with LICM

Categories

(Core :: JavaScript Engine: JIT, defect, P1)

defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox110 --- fixed

People

(Reporter: alexical, Assigned: alexical)

References

Details

Attachments

(1 file)

No description provided.
Severity: -- → S3
Priority: -- → P1
Pushed by dothayer@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bd78e2e5b1fe
Ensure MConstantProto instructions don't interfere with LICM r=iain
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
Regressions: 1808210
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: