Bug 1804326 - Ensure MConstantProto instructions don't interfere with LICM r=iain

Differential Revision: https://phabricator.services.mozilla.com/D163986